# adventure_quest_proj

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs  persistence.rs  tool_config.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: lib.rs
crates/gameplay/: Cargo.toml
crates/gameplay/src/: lib.rs
crates/meshing/: Cargo.toml
crates/meshing/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: lib.rs
crates/voxels/: Cargo.toml
crates/voxels/src/: block_config.rs  lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
saves/: settings.cfg
saves/default_world/: chunks.aqchunks
