[package]
name = "renderer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytemuck.workspace = true
foundation.workspace = true
glam.workspace = true
meshing.workspace = true
voxels.workspace = true
wgpu.workspace = true
winit.workspace = true
